--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <!--Bootstrap CSS-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
     <!--GOOGLE FONTS-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -26,7 +27,7 @@
     <!--NAVBAR-->
     <nav class="navbar navbar-expand-lg brandColor" data-bs-theme="dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Dwisign</a>
+            <a class="navbar-brand" href="#">OmarSuhendro</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -55,7 +56,8 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">Contact</a>
+                        <!-- <a href="#" class="nav-link">Contact</a> -->
+                        <a class="nav-link" href="https://wa.me/6285283655638" target="_blank">CONTACT</a>
                     </li>
                 </ul>
                 <!-- <form class="d-flex" role="search">
@@ -121,6 +123,7 @@
                 <!-- <div class="col-lg-6 col-md-2"> -->
                 <div class="col-lg-4">
                     <div class="cardKnowledge">
+                        <i class="bi bi-filetype-html"></i>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, doloribus. Iure consequatur
                             illo quod, voluptate minus ipsum, cupiditate fuga asperiores aliquam iusto culpa aspernatur!
                             Excepturi, deleniti! Nisi asperiores voluptatibus incidunt.
@@ -131,6 +134,7 @@
                 <!-- <div class="col-lg-3 col-md-2"> -->
                 <div class="col-lg-4">
                     <div class="cardKnowledge">
+                        <i class="bi bi-filetype-css"></i>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit accusamus neque, quibusdam
                             odit eius asperiores unde doloribus assumenda. Recusandae vero dolores cum dignissimos magni
                             quod reprehenderit, error velit reiciendis. Eaque!
@@ -141,6 +145,7 @@
                 <!-- <div class="col-lg-3 col-md-8"> -->
                 <div class="col-lg-4">
                     <div class="cardKnowledge">
+                        <i class="bi bi-filetype-js"></i>
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates, quaerat provident
                             aperiam magnam asperiores vel! Magni porro amet odit animi quasi rerum earum omnis possimus
                             rem, non, ducimus tempore. Voluptates.
@@ -158,6 +163,58 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+
+    <!--sSECTION NEWS-->
+    <div class="sectionNews">
+        <div class="container">
+            <div class="newsBox">
+                <div class="row">
+                    <div class="col-lg-7">
+                        <div class="txtNews">
+                            <h1>Lorem ipsum</h1>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium aliquam blanditiis eius perspiciatis recusandae dignissimos, animi doloremque culpa ducimus ut iusto quasi ullam tempora itaque necessitatibus nemo atque placeat saepe!</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-5">
+                        <div class="imageNews">
+                            <img src="assets/outsourching_1.jpg" width="100%">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="newsBox">
+                <div class="row">
+                    <div class="col-lg-5">
+                        <div class="imageNews">
+                            <img src="assets/outsourching_2.jpg" width="100%">
+                        </div>
+                    </div>
+                    <div class="col-lg-7">
+                        <div class="txtNews">
+                            <h1>Lorem ipsum</h1>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium aliquam blanditiis eius perspiciatis recusandae dignissimos, animi doloremque culpa ducimus ut iusto quasi ullam tempora itaque necessitatibus nemo atque placeat saepe!</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="newsBox">
+                <div class="row">
+                    <div class="col-lg-7">
+                        <div class="txtNews">
+                            <h1>Lorem ipsum</h1>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium aliquam blanditiis eius perspiciatis recusandae dignissimos, animi doloremque culpa ducimus ut iusto quasi ullam tempora itaque necessitatibus nemo atque placeat saepe!</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-5">
+                        <div class="imageNews">
+                            <img src="assets/outsourching_3.jpg" width="100%">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </body>
 
 </html>
